2011-05-29  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.cc (fhandler_overlapped::wait_overlapped): Make sure that
	I/O is cancelled on signal.

2011-05-28  Ryan Johnson  <ryan.johnson@cs.utoronto.ca>

	* dll_init.cc (dll_list::alloc): Initialize dll::image_size.
	(reserve_at): Don't reserve space needed by the target dll if the
	latter overlaps the free region to be blocked.
	(dll_list::load_after_fork): Use new version of reserve_at.
	* dll_init.h (dll::image_size): New member.
	(pefile): New struct.

2011-05-28  Christopher Faylor  <me.cygwin2011@cgf.cx>
	    Ryan Johnson  <ryan.johnson@cs.utoronto.ca>

	* dll_init.c (dll_list::load_after_fork): Don't clear in_forkee here.
	* fork.cc (frok::errmsg): Rename from 'error'.
	(frok::error): New function.  Handle conditional printing of error
	messages.
	(frok::parent): Record hchild handle for use by error function.  Use
	throughout.  Use error function rather than setting error pointer
	directly.
	(fork): Clear is_forkee here.  Accommodate rename of 'error' to
	'errmsg'.
	* sigproc.cc (child_info::proc_retry): Detect EXITCODE_FORK_FAILED.

2011-05-28  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.cc (handler_base_overlapped::wait_overlapped): Rework to
	attempt to properly set errno and bytes read for non-blocking case.
	Change to just rely on res to indicate error conditions.

2011-05-28  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.cc (fhandler_base_overlapped::wait_overlapped): Don't set
	io_pending unless ReadFile has returned an error.  (this is a partial fix,
	accidentally checked in)

2011-05-28  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* autoload.cc: Call _api_fatal in asm.
	* child_info.h: Redefine CURR_CHILD_INFO_MAGIC.
	(child_info_fork::abort): Rename from handle_failure.  Change
	arguments.
	* cygtls.h (_local_storage::ttybuf): New field.
	* dcrt0.cc (vapi_fatal): Split api_fatal.  Add "in forked process" to
	message when appropriate.
	(api_fatal): Use vapi_fatal.